// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionData.vue Should display instructions if there is no ABI 1`] = `
<div>
  <div class="text-right"><a href="#/transaction/0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8" class="">0xb750fb9dd193b...</a>
    <hr role="separator" aria-orientation="vertical" class="mx-2 v-divider v-divider--vertical theme--light"> <a href="#/block/12695880" class="">12695880</a>
    <hr role="separator" aria-orientation="vertical" class="ml-2 v-divider v-divider--vertical theme--light"> <button type="button" class="primary--text v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate link mdi mdi-reload theme--light" style="font-size: 16px;"></i></span></button>
  </div>
  <!---->
  <div class="row my-2">
    <div class="col">
      <h3 class="mb-2">Called Function</h3>
      <div class="v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text"><b>Signature:</b> 0xa9059cbb<br> <b>Data:</b> 0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001
        </div>
      </div>
    </div>
  </div>
  <div class="row my-2">
    <div class="col">
      <h3 class="mb-2">Emitted Events</h3>
      <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text"><b>Emitter:</b> <span><!----> <a href="#/address/0xc00e94Cb662C3520282E6f5717214004A7f26888" class="">0xc00e94Cb...26888</a> <!----> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xc00e94Cb662C3520282E6f5717214004A7f26888" value="0xc00e94Cb662C3520282E6f5717214004A7f26888"></span>
          <!----></span><br> <b>Topics:</b>
          <ul>
            <li>0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef</li>
            <li>0x000000000000000000000000e93381fb4c4f14bda253907b18fad305d799241a</li>
            <li>0x000000000000000000000000c00e94cb662c3520282e6f5717214004a7f26888</li>
          </ul> <b>Data:</b> 0x0000000000000000000000000000000000000000000000000000000000000001
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionData.vue Should display transaction data 1`] = `
<div>
  <div class="text-right"><a href="#/transaction/0xb750fb9dd193bb4a46ea5426837c469815d2494abd68a94b1c2c190f3569c5b8" class="">0xb750fb9dd193b...</a>
    <hr role="separator" aria-orientation="vertical" class="mx-2 v-divider v-divider--vertical theme--light"> <a href="#/block/12695880" class="">12695880</a>
    <hr role="separator" aria-orientation="vertical" class="ml-2 v-divider v-divider--vertical theme--light"> <button type="button" class="primary--text v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate link mdi mdi-reload theme--light" style="font-size: 16px;"></i></span></button>
  </div>
  <!---->
  <div class="row my-2">
    <div class="col">
      <h3 class="mb-2">Called Function</h3>
      <transaction-function-call-stub to="0xc00e94cb662c3520282e6f5717214004a7f26888" value="0" data="0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001"></transaction-function-call-stub>
    </div>
  </div>
  <div class="row my-2">
    <div class="col">
      <h3 class="mb-2">Emitted Events</h3>
      <transaction-event-stub log="[object Object]"></transaction-event-stub>
    </div>
  </div>
</div>
`;
